--- a/css/futura/style.css
+++ b/css/futura/style.css
@@ -45,7 +45,7 @@ header nav ul li a {
 .hero {
   position: relative;
   height: 800px;
-  background: url('/img/calvino-scrivania.jpg') no-repeat center center/cover;
+  background: url('../../img/calvino-scrivania.jpg') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
